Bug 17003. Give textareas a childnode and connect that childnode to .defaultValue. Also make textareas work properly for display: none;

r=jkeiser sr=jst